syntax = "proto3";

option csharp_namespace = "ZeafloServer.Proto.Places";

enum PlaceType {
     Restaurant = 0;
     Coffee = 1;
     Hotel = 2;
     HomeStay = 3;
     Resort = 4;
     Market = 5;
     Church = 6;
     Museum = 7;
     Tunnel = 8;
     Zoo = 9;
     Park = 10;
}

message GrpcPlace {
  string id = 1;
  string name = 2;
  string address= 3;
  PlaceType type = 4;
  string cityId = 5;
  double latitude = 6;
  double longitude = 7;
  double rating = 8;
  int32 reviewCount = 9;
  bool isOpen = 10;
  string location = 11;
  bool isDeleted = 12;
}

message GetPlacesByIdsResult {
  repeated GrpcPlace places = 1;
}

message GetPlacesByIdsRequest {
  repeated string ids = 1;
}